--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-pandas==2.1.4+dfsg
-nltk==3.9.1
-telethon==1.29.2
-colorama==0.4.5
+telethon==1.34.0
+pandas==2.2.1
+nltk==3.8.1
+colorama==0.4.6
+stix2==3.0.1
+stix2-patterns==2.0.0
+python-dateutil==2.8.2
+urllib3==2.2.1
+matplotlib==3.8.2
+seaborn==0.13.1
+scikit-learn==1.4.0
